# movielist

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: api.py  crud.py  db.py  main.py  models.py  pyproject.toml  security.py
backend/app/api/: auth.py  crud.py  models.py  movies.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  functions.js  index.css  index.js
frontend/src/components/: Card.css  Card.js  CardResult.css  CardResult.js  Filter.js  Form.css  LoginForm.js  Search.css  Search.js  SearchBar.js  SignupForm.js  Sort.js
frontend/src/pages/: Error.js  Login.js  Movies.css  Movies.js  MyMovies.css  MyMovies.js  Search.js  Signup.js
server/: =3.0  README.md  example.db  pyproject.toml
server/alembic/versions/: da9301b43279_add_movie_and_user_tables.py  ec46ad7fc181_added_all_tables.py
server/app/: main.py  movie_data.py  schemas.py
server/app/api/api_v1/: api.py
server/app/api/api_v1/endpoints/: movie.py
server/app/core/: config.py
server/app/crud/: __init__.py  base.py  crud_movie.py  crud_user.py
server/app/db/: base.py  init_db.py
server/app/models/: movie.py  user.py
server/app/schemas/: __init__.py  movie.py
server/app/templates/: index.html
